Fix CORS configuration to allow frontend-backend communication